forgot to make the button button oops

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
 	<maintext>
 		<h1>Wrong site.</h1>
 		<p>The actual GMD King site is</p>
-		<button href="https://gmdking.net" class="button-class">gmdking.net</button>
+        <button onclick="location.href = 'https://gmdking.net';" id="myButton" class="float-left submit-button" >gmdking.net</button>
 	</maintext>
 </body>
 </html>
